[package]
name = "tauri-plugin-androidpermissionprompt"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-androidpermissionprompt"

[dependencies]
tauri = { version = "2.1.0", features = ["specta"] }
specta = "=2.0.0-rc.20"
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }
